--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<li><a href="https://www.behance.net/nicramu" target="_blank" class="button"><i class="fa fa-behance"></i></a></li>
 					<li><a href="https://p3d.in/u/nicramu" target="_blank" class="button"><i class="fa fa-cube"></i></a></li>
 					<li><a href="https://www.youtube.com/user/goten22pl/" target="_blank" class="button"><i class="fa fa-youtube"></i></a></li>
-					<li><a href="/galeria/index.php" target="_blank" class="button"><i class="fa fa-ellipsis-h"></i></a></li>
+					<li><a href="./galeria.html" target="_blank" class="button"><i class="fa fa-ellipsis-h"></i></a></li>
 					
 					</ul>    
         
