--- a/galeria.html
+++ b/galeria.html
@@ -81,7 +81,7 @@ body {
 (2018) Himalaya Shrine.jpg
 `*/
 
-import * as images from './galeria2/files.txt';
+import * as images from './galeria2/files.json';
 
 images = images.split('\n')
 
