--- a/galeria.html
+++ b/galeria.html
@@ -81,7 +81,8 @@ body {
 (2018) Himalaya Shrine.jpg
 `*/
 
-import * as images from './galeria2/files.json';
+import images from "./galeria2/files.txt" assert { type: "text" };
+
 
 images = images.split('\n')
 
