--- a/galeria.html
+++ b/galeria.html
@@ -81,7 +81,7 @@ body {
 (2018) Himalaya Shrine.jpg
 `*/
 
-import images from "./galeria2/files.txt" assert { type: "text" };
+import images from "./galeria2/files.txt" assert { type: "text/plain" };
 
 
 images = images.split('\n')
