--- a/galeria.html
+++ b/galeria.html
@@ -81,10 +81,10 @@ body {
 (2018) Himalaya Shrine.jpg
 `*/
 
-import images from "./galeria2/files.txt" assert { type: "plain/text" };
+import data from "./galeria2/files.txt" assert { type: "plain/text" };
 
 
-images = images.split('\n')
+images = data.split('\n')
 
 
 const sweeterArray = images.map(image => {
