--- a/galeria.html
+++ b/galeria.html
@@ -71,7 +71,7 @@ body {
 
 
 
-<script type="module">
+<script defer>
 /*let images = `
 (2017) Wroclaw Dworzec Glowny WIP8.jpg
 (2017) Wroclaw Dworzec Glowny WIP9.jpg
