--- a/galeria.html
+++ b/galeria.html
@@ -81,7 +81,7 @@ body {
 (2018) Himalaya Shrine.jpg
 `*/
 
-import data from "./galeria2/files.txt" assert { type: "text" };
+import data from "./galeria2/files.json" assert { type: "json" };
 
 
 images = data.split('\n')
