--- a/galeria.html
+++ b/galeria.html
@@ -84,7 +84,7 @@ body {
 import data from "./galeria2/files.json" assert { type: "json" };
 
 
-images = data.split('\n')
+images = data
 
 
 const sweeterArray = images.map(image => {
