--- a/galeria.html
+++ b/galeria.html
@@ -84,7 +84,7 @@ body {
 import data from "./galeria2/files.json" assert { type: "json" };
 
 
-images = JSON.parse(data)
+images = JSON.Parse(data)
 
 
 const sweeterArray = images.map(image => {
