--- a/galeria.html
+++ b/galeria.html
@@ -81,7 +81,7 @@ body {
 (2018) Himalaya Shrine.jpg
 `*/
 
-import data from "./galeria2/files.json" assert { type: "json" };
+import data from "./galeria2/files.json" assert { type: "application/json" };
 
 
 images = JSON.parse(data)
