--- a/galeria.html
+++ b/galeria.html
@@ -84,7 +84,7 @@ body {
 import data from "./galeria2/files.json" assert { type: "application/json" };
 
 
-images = JSON.parse(data)
+let images = JSON.parse(data)
 
 
 const sweeterArray = images.map(image => {
