--- a/galeria.html
+++ b/galeria.html
@@ -81,10 +81,10 @@ body {
 (2018) Himalaya Shrine.jpg
 `*/
 
-import data from "./galeria2/files.json" assert { type: "json" };
+import data from "https://nicramu.github.io/galeria2/files.txt" assert { type: "text" };
 
 
-let images = JSON.parse(data)
+let images = data.split('\n')
 
 
 const sweeterArray = images.map(image => {
