--- a/galeria.html
+++ b/galeria.html
@@ -81,7 +81,7 @@ body {
 (2018) Himalaya Shrine.jpg
 `*/
 
-import data from "https://nicramu.github.io/galeria2/files.txt" assert { type: "text" };
+import data from "https://nicramu.github.io/galeria2/files.txt" assert { type: "text/plain" };
 
 
 let images = data.split('\n')
