--- a/galeria.html
+++ b/galeria.html
@@ -84,7 +84,7 @@ body {
 import data from "https://nicramu.github.io/galeria2/files.json" assert { type: "json" };
 
 
-let images = data.split('\n')
+let images = data.split('/n')
 
 
 const sweeterArray = images.map(image => {
