--- a/galeria.html
+++ b/galeria.html
@@ -83,7 +83,7 @@ let images = `(2017) Wroclaw Dworzec Glowny WIP8.jpg
 
 const sweeterArray = images.map(image => {
 const h2 = document.querySelector("p");
-let html = "<p>My new paragraph."+image+"</p>";
+let html = "<p>My new paragraph."+image+"</p><br>";
 h2.insertAdjacentHTML("afterend", html);
 })
 </script>
