--- a/galeria.html
+++ b/galeria.html
@@ -69,12 +69,9 @@ a{
 
 <script defer>
 let images = `
-(2017) Wroclaw Dworzec Glowny WIP8.jpg
-(2017) Wroclaw Dworzec Glowny WIP9.jpg
-(2017) Wroclaw Dworzec Glowny.jpg
-(2018) Himalaya Shrine 2.jpg
-(2018) Himalaya Shrine WIP.jpg
-(2018) Himalaya Shrine.jpg
+(2012) Brama 2.jpg
+(2012) Brama 3.jpg
+(2012) Brama 4.jpg
 `
 images = images.split('\n');
 
