--- a/galeria.html
+++ b/galeria.html
@@ -56,15 +56,20 @@ span{
 a{
     text-decoration: none;
     color: inherit;
-  
 }
+
+img{
+  height: 100%;
+    width: 100%;  
+}
+
 </style>
 </head>
 <body>
 <div id="main">
 
       <div id="header">
-	  <h1>Wszystkich obrazków: {count}</h1>
+	  
 	  </div>
 
 <script defer>
@@ -78,6 +83,7 @@ images = images.split('\n');
 let url='https://nicramu.github.io/galeria/albums/wszystko/';
 let count = images.length
 
+document.querySelector("#header").insertAdjacentHTML("afterbegin",'<h1>Wszystkich obrazków: ${count}</h1>')
 
 const sweeterArray = images.map(image => {
 const h2 = document.querySelector("#header");
