--- a/galeria.html
+++ b/galeria.html
@@ -83,7 +83,7 @@ let url='https://nicramu.github.io/galeria/albums/wszystko/';
 let count = images.length
 
 for (let i = 0; i < images.length; i++) {
-    images.push({ name: images[i].split('.')[0], src: url+images[i], count: i + 1 })
+    images.push({ name: images[i], src: url+images[i], count: i + 1 })
   }
 
 
