--- a/galeria.html
+++ b/galeria.html
@@ -77,7 +77,7 @@ let images = `
 (2012) Brama 2.jpg
 (2012) Brama 3.jpg
 (2012) Brama 4.jpg
-`
+`.trim()
 images = images.split('\n');
 let url='https://nicramu.github.io/galeria/albums/wszystko/';
 let count = images.length
