--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<li><a href="https://p3d.in/u/nicramu" target="_blank" class="button"><i class="fa fa-cube"></i></a></li>
 					<li><a href="https://www.youtube.com/user/goten22pl/" target="_blank" class="button"><i class="fa fa-youtube"></i></a></li>
 					<li><a href="./galeria.html" target="_blank" class="button"><i class="fa fa-ellipsis-h"></i></a></li>
-					<li><a href="https://github.com/nicramu" target="_blank" class="button"><i class="fa fa-ellipsis-h"></i></a></li>
+					<li><a href="https://github.com/nicramu" target="_blank" class="button"><i class="fa fa-github"></i></a></li>
 
 			</ul>    
       </h1>
