--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="shortcut icon" href="favicon.ico">
 <meta name="msapplication-TileColor" content="#00aba9">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">	  
+<meta name="theme-color" content="#000">	  
   
   
 </head>
