--- a/galeria.html
+++ b/galeria.html
@@ -276,7 +276,7 @@ let html = `
           <div id='card'>
 
             <div id='img'>
-              <img class="lazy" src='${image.src}' />
+              <img loading="lazy" src='${image.src}' />
             </div>
             <p><span>${image.count}</span>${image.name}</p>
 
