--- a/galeria.html
+++ b/galeria.html
@@ -71,6 +71,7 @@ img{
     <div id="header">
 	  
 	  </div>
+    <script src="http://afarkas.github.io/lazysizes/lazysizes.min.js" async=""></script>
 
 <script defer>
 let images = `
@@ -276,7 +277,7 @@ let html = `
           <div id='card'>
 
             <div id='img'>
-              <img loading="lazy" src='${image.src}' />
+              <img data-src='${image.src}' class='lazyload' />
             </div>
             <p><span>${image.count}</span>${image.name}</p>
 
@@ -287,35 +288,7 @@ h2.insertAdjacentHTML("afterend", html);
 })
 
 
-document.addEventListener("DOMContentLoaded", function() {
-  var lazyloadImages = document.querySelectorAll("img.lazy");    
-  var lazyloadThrottleTimeout;
-  
-  function lazyload () {
-    if(lazyloadThrottleTimeout) {
-      clearTimeout(lazyloadThrottleTimeout);
-    }    
-    
-    lazyloadThrottleTimeout = setTimeout(function() {
-        var scrollTop = window.pageYOffset;
-        lazyloadImages.forEach(function(img) {
-            if(img.offsetTop < (window.innerHeight + scrollTop)) {
-              img.src = img.dataset.src;
-              img.classList.remove('lazy');
-            }
-        });
-        if(lazyloadImages.length == 0) { 
-          document.removeEventListener("scroll", lazyload);
-          window.removeEventListener("resize", lazyload);
-          window.removeEventListener("orientationChange", lazyload);
-        }
-    }, 20);
-  }
-  
-  document.addEventListener("scroll", lazyload);
-  window.addEventListener("resize", lazyload);
-  window.addEventListener("orientationChange", lazyload);
-});
+
 
 </script>
 </div>
