--- a/galeria.html
+++ b/galeria.html
@@ -71,7 +71,7 @@ img{
     <div id="header">
 	  
 	  </div>
-    <script src="http://afarkas.github.io/lazysizes/lazysizes.min.js" async=""></script>
+    <script src="./lazysizes.min.js" async=""></script>
 
 <script defer>
 let images = `
