--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <source src="back.mp4" type="video/mp4">
 </video>
 
-<div id="ios" style="display: block;">
-  <button id="accelPermsButton"  style="height:50px;" onclick="getAccel()"><h1>Turn on gyroscope</h1></button>
-</div>
+
+  <button id="accelPermsButton" onclick="getAccel()">Turn on gyroscope</button>
+
 
 <div class="card-wrapper">
 
