--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
 <source src="back.mp4" type="video/mp4">
 </video>
 
-
-  <button id="accelPermsButton" onclick="getAccel()">Turn on gyroscope</button>
-
+<div id="ios" style="display: block;">
+  <button id="accelPermsButton"  style="height:50px;" onclick="getAccel()"><h1>Get Accelerometer Permissions</h1></button>
+  <h3>Watch on mobile</h3>
+  <ul>
+    <li>X beta : <span id="pos-x"></span></li>
+    <li>Y gamma : <span id="pos-y"></span></li>
+    <li>Z alpha : <span id="pos-z"></span></li>
+  </ul>
+</div>
 
 <div class="card-wrapper">
 
