--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </video>
 
 <div id="ios" style="display: block;">
-  <button id="accelPermsButton"  style="height:50px;" onclick="getAccel()"><h1>Get Accelerometer Permissions</h1></button>
+  <button id="accelPermsButton" onclick="getAccel()"><h1>Get Accelerometer Permissions</h1></button>
   <h3>Watch on mobile</h3>
   <ul>
     <li>X beta : <span id="pos-x"></span></li>
