--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 <source src="back.mp4" type="video/mp4">
 </video>
 
-<div id="ios" style="display: block;">
-  <button id="accelPermsButton" onclick="getAccel()"><h1>Get Accelerometer Permissions</h1></button>
+<button id="accelPermsButton" onclick="getAccel()"><h1>Get Accelerometer Permissions</h1></button>
+
+<div style="display: none;">
   <h3>Watch on mobile</h3>
   <ul>
     <li>X beta : <span id="pos-x"></span></li>
