--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <source src="back.mp4" type="video/mp4">
 </video>
 
-<button id="accelPermsButton" onclick="getAccel()"><h1>Get Accelerometer Permissions</h1></button>
+<button id="accelPermsButton" onclick="getAccel()">enable gyro</button>
 
 <div style="display: none;">
   <h3>Watch on mobile</h3>
