--- a/inne/bz.html
+++ b/inne/bz.html
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
 	flex-direction: column;	
-	font-family: Lato;
+	font-family: sans-serif;
 	    background-color: #0e0818;
     color: #fff;
     text-align: center;
