--- a/inne/bz.html
+++ b/inne/bz.html
@@ -21,6 +21,9 @@
     text-align: center;
     font-size: 14px;
 }
+div {
+    text-align: center;
+}
   </style>
 <script async>
 async function asd(){
