--- a/inne/bz.html
+++ b/inne/bz.html
@@ -20,6 +20,8 @@
     color: #fff;
     text-align: center;
     font-size: 18px;
+    margin: 0;
+    padding: 0;
 }
 div {
     text-align: center;
@@ -43,7 +45,7 @@ const onFrame = () =>{
    document.getElementById('log').innerText = volumeMeterEl
 
 
-  if(volumeMeterEl>0.4){
+  if(volumeMeterEl>1){
       document.getElementById('tort').src = "./tort_off.png";
       document.getElementById('done').innerText = "Na pewno się spełni! 🤗";
 window.requestAnimationFrame()
